# Vietnamese-DontStarveTogether-RAG

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  ATTRIBUTION.md  CODEBASE_GUIDE.md  DEPLOYMENT.md  DESIGN.md  IMPLEMENTATION_STATUS.md  KNOWN_LIMITATIONS.md  Makefile  OPERATIONS.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  milestone0.md  package-lock.json  package.json  planning.md  prompt.md  pyproject.toml
.github/workflows/: ci.yml
apps/api/: __init__.py  main.py
apps/web/: README.md  eslint.config.js  index.html  jsconfig.json  next.config.ts  package-lock.json  package.json  styles.css
data/evaluation/: release_questions.json  retrieval_milestone6.json
data/glossary/: dst_vi_glossary.csv
data/ingestion/: discovery_config.json
scripts/: activate_corpus.py  build_corpus.py  check_supabase.py  check_wiki.py  discover_pages.py  embed_corpus.py  evaluate_answers.py  evaluate_release.py  evaluate_retrieval.py  export_corpus.py  ingest_mvp.py  release_corpus.py  restore_corpus.py  rollback_corpus.py  security_review.py  sync_aliases.py  sync_wiki.py
src/: auto_ingest.py  rag.py  wiki.py
src/config/: __init__.py  settings.py
src/embeddings/: __init__.py  adapter.py  models.py  worker.py
src/evaluation/: __init__.py  answers.py  release.py  retrieval.py
src/generation/: __init__.py  citations.py  guardrails.py  llm.py  models.py  prompts.py  service.py
src/ingestion/: __init__.py  mediawiki_client.py  page_discovery.py  sync_manager.py
src/operations/: __init__.py  corpus_lifecycle.py  evaluation_report.py  restore.py  snapshot.py
supabase/: config.toml  seed.sql
(+89 files in other folders)
