[project]
name = "dst-vietnamese-rag"
version = "0.1.0"
description = "Backend foundation for the DST Vietnamese Knowledge Assistant"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116,<1.0",
    "httpx>=0.28,<1.0",
    "pydantic-settings>=2.10,<3.0",
    "uvicorn[standard]>=0.35,<1.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17,<2.0",
    "pytest>=8.4,<10.0",
    "ruff>=0.12,<1.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["apps", "src", "scripts", "tests"]
plugins = ["pydantic.mypy"]

