[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "dst-wiki-chatbot"
version = "1.0.0"
description = "Small Vietnamese RAG chatbot for the Don't Starve Together Wiki"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "httpx>=0.27,<1",
    "mwparserfromhell>=0.7,<1",
    "pydantic-settings>=2.6,<3",
    "uvicorn[standard]>=0.32,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<10",
    "ruff>=0.8,<1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "scripts*", "src*"]

[tool.pytest.ini_options]
testpaths = ["tests/mvp"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
